datasheet pane ui is done. missing some logic

--- a/DesktopC#App/ProjectAssistant/MainForm.resx
+++ b/DesktopC#App/ProjectAssistant/MainForm.resx
@@ -120,4 +120,81 @@
   <data name="folderNoteLabel.Text" xml:space="preserve">
     <value>These are the folders typically created for a new project. You can add, edit, or delete folders before creating the folder structure. However, you'll have to manually manage these folders after creating them, or if the project is existing.</value>
   </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAMMOAADDDgAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAfGRLAH1oWAF5WzIRdlYnLnZW
+        JUl0UyFUclIgU3RUJER3WCsqfGA5DpWIhwGLd2YAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB7Zk8AcEEAAHhZLhF3ViROdVMelnVS
+        HMR1UhzTdVMd0nVTHc10UhzOdFId03VSHdJ1Ux2/dlQgjHdWJEN6XTMMc08WAIt/cQAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACRjJIAdlUjAHlbMQ12VCFhdlMcw3ZT
+        HdN1VCCrdFQkjXFTJIhwUyOQb1EflW9RIJZwUyOQclMjiHRUI5F2VCC0dlMc2HZUHbp3ViNSe2A5CHlc
+        MAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgGpLAFkPAAB4WCgxdlQesnZT
+        HNd1VCGVcFIiiW1OG7hsTBfibEsV92xLFf5sSxX/bEsV/2xMFf5sTBX1bEwX3m1PHLRyUyOMdlUho3ZT
+        HNx2VB+fd1krIHFMFQCNf2oAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIBnQwCamZ8BeFclTnZT
+        HdZ2Ux6vcFIigWxNGclsTBX6bEsU/2xLFP9sSxT/bEsU/mtLFP9rSxT/a0sU/2tLFP9sSxT/bEsU/2xM
+        FfdtThrBclQjh3VTHsR2Ux3Hd1YlMnZPEAB6ZksAAAAAAAAAAAAAAAAAAAAAAAAAAAB5YEAAdyoAAHdW
+        JFR2UxzhdVQhk21PHpBsSxbwbEsU/2xLFf9rSxT/a0sU/2tLFP9rSxT/a0sU/2tLFP9rSxT/a0sU/2xL
+        FP9sSxT/bEsU/2xMFP9sTBbqcFMkanZUHqJ1UhzQd1gnMHJQGACNe2cAAAAAAAAAAAAAAAAAe2hPAHVQ
+        GAB2VSU+dlMc3nZVIIRwUyZJbEwW82xLFP9sSxT/bEsV/2tLFP9rSxT/a0sU/2tLFP9rSxT/a0sU/2xL
+        FP9sSxT/bEsU/2xLFP5sTBX2bEwV+GxMFP9rTRtue2A6DnVTHql2Ux3DeFkrHHZWJgDo//8AAAAAAAAA
+        AAB1VicAdlgrG3ZTHcd2VB+mgWZDCG1PH1RsSxX9bEsU/2xLFf9sSxX/a0sU/2tLFP9rSxT/bEsU/2tL
+        FP9rSxT/bEsU/2xLFP9rSxT2a00apG5SI31uUSNzbE0aqm1PH1VsThwAdlgsHnZTHcd2VB+WemJDBXlc
+        NAAAAAAAe2I9AIKIogF1VB+Hd1Qd0nhZKyRuTx0AbE8gS2tLFflsSxT/bEsU/2tLFf9rSxT/a0sU/2tL
+        FP9rSxT/a0sV8WtLFfVsSxT/a0sU92xOHJRrTRyba0sW62tMGNVuUSJedF49DXBXMgBzTxUAdlYkSHZT
+        HOB3ViRLc1AYAJSIfwB1VCMAdVYnL3ZTHN53ViJicUoKAGtPIgBsUCQoa0sW5WxLFP9sSxT/bEsV/2xL
+        Ff9sSxT/bEsU/2xLFP9sTRyWa0wZt2tLFfxtTx2XbU8dnWtLFftrSxT/a0sU/2tMFuNtTx9IVzAAAHpg
+        OgB6Zk0EdlQenXZUHrd4XTcLeFwyAHI5AAB2VB+Gd1QdxnpdMRJ5XC8Adl05AHhjRwVsTRqia0sU/2xL
+        FP9sSxX/bEsV/2xLFP9sSxT/a0sW6WtPITJqTR1SbE4dj21PHJtrSxX6a0sU/2tLFP9sSxT/bEsU/2xM
+        F9tvUiI7ZEIGAHVUIQB2ViQ6d1Qc4XhXJUR1VB8AeFsvF3dUHcx3ViF1c0sKAIpxUQCblJcAbE4cAG5R
+        IjBsTBfbbEsU/2xLFf9sSxX/bEsU/2xLFf9rTRmjb1pABHhjSQVsTh2Fa0sV+mxLFP9sSxT/a0sU/2tL
+        FP9sSxT/bEsU/21NGNBwVCUvb1EeAHhfOgl3VB65d1UfkGwfAAB3VyVIeFQc33lYJjR3VyQAAAAAAAAA
+        AAB5YkEAUyMAAG5RIUpsTRfcbEsV/2xLFP9sSxT/bEwW9G1PH0htTx8AcVctGmtMF9lsSxT/bEsU/2tL
+        FP1sTRnDa0wW42xLFP9sSxT/bEsU/21NGcNwVCcjcUwPAHdVIXp3VB3Jel0zEnZVIH93VB3LelwxEXtd
+        MgAAAAAAAAAAAAAAAAB7ZEQA////AG5RIzFtThqjbEwX6WxLFf9sTRm7cVcwDXBWLABvVS0Na0wYtGxL
+        FP9sSxX8bE0ZqHBUKhhsTx9Ra0wW6GxLFP9sSxT/bEsU/21OGrRxViwVd1YlR3ZTHOB2VygydlQfpnhV
+        Hq6Fc2ADiG5LAAAAAAAAAAAAAAAAAAAAAACyucUAcFQqAHdfOgZxVCYtbU4eVm1QIzB0WzQQb1MmK3BU
+        KCdvUycubk8db21PHmFwVCkTbVAiAI6b0gBsTh5Za0wW62xLFP9sSxT/bEsV/21OGp9yVSg7dFEb4HdY
+        JlJ0Uh26d1YgmlEDAACvnH8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHBUKQBzWDAKbU8eaWtM
+        GMlrSxbqa0sX6GtMGLtsTh5Ncl09A3BXMAAAAAAAdFs1AIFzaAFsTx1ha0wW72xLFP9sSxT/bEsV+25P
+        HZ1zUyGbd1goSnVTHbx5WCKXURMAANDAoQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABuVCsAcFcyCWtN
+        GpBrSxX6a0oU/2tKFP9qShT/akoU/2pLFfBrThxmtLvlAXlhPgAAAAAAdVw1AH9sUwJtUB5oa0wW8WtL
+        FP9sSxT/bEwV+W5QHoV4XzsMdlMfr3dVH6WtxPwBl4FhAAAAAAAAAAAAAAAAAAAAAAAAAAAAkX5lAGdH
+        EABrTh5WaksV9mpKFP9rShT/akoU/2pKFP9qShT/akoU/2pLFuJtUSQva08gAAAAAAAAAAAAdFw1AH1q
+        TQRtUB5wa0sV9GtLFP9sSxT/a0sV82xPHnp2VCCNd1Mdv3ldNwp7XzcAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAB1XjoAdWFHBWpMGatqShT/akoU/2pKFP9qShT/akoU/2pKFP9rSxT/akoU/2tOHXxfOwAApJB0AAAA
+        AAAAAAAAcFcvAHVfPgVsThx5a0sV92tLFP9rSxT/akwY43ZVI112UxzZd1cpInZXKAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAHNbNAByWTIRaksYzmpKE/9qShP/akkT/2pJE/9qShP/akoT/2pKE/9qShP/aUsYqH11
+        dAKAa0sAAAAAAAAAAAAAAAAAcVYtAHNbNwhsThx9bEwW6mxMFu9rTRuWeFkrKHdTHdp3VSJXdVEZAKSR
+        gQAAAAAAAAAAAAAAAACZj34AopqMBox8YyBxViqsb1Ml029UJtBvVCbRb1Ml0W9TJdFvUyXRb1Ql0G9U
+        JdRwVy6UlYp6FqCWhQSdk4IAAAAAAAAAAAAAAAAAeV83AHpgOgd1WCpNcVQmRm9ULAp9a1YFd1QfpnhU
+        Hqd9ZkwEfF85AAAAAAAAAAAAraSUABEAAACYjXt5l4t62JaKedqWinjclop53JaKeNyWinjclop53JaK
+        eNyWinjclop43JaKedqXi3nVmY17V5WJdgDRx7sAAAAAAAAAAAB3VyYAeFgoJ3dVH8V3WChGdVUhAHRR
+        GwB2VSNNd1Mc4HhYJzl3VSEAlYiDAAAAAACsopMAcmVPAJiMe2KXi3rjlot6/5aLev+Wi3r/lot6/5aL
+        ev+Wi3r/lot6/5aLev+Wi3r/l4t6/5aLedGYjXpBlIl2ANHHuwAAAAAAgWdFAFYAAAB3VSCCdlMdzXZZ
+        LBd2WCsAd1syAHddNwt3VB+zeFUfqXxgOgl7XTIAAAAAAAAAAAChl4UAin1sAJeMen6Wi3r/lot6/paL
+        ev6Wi3r/lot6/5eLev+Wi3r+lot6/paLev6Wi3r9l4x6XJSIdgChmYkAAAAAAIN7fwB3VSIAeFcnLndU
+        Hdx3ViJsc0kCAH1pTACYjX8AdFIdAHZXJz53Ux3geFYjZlwcAACBZ0MAAAAAAAAAAACWi3gAl4x6SpaL
+        efaWinr/lop6/5aLefaWi3r4lot69ZaLevmWi3r/lop5/5aKeeqYjHowl4t5AAAAAAAAAAAAeVsuAHld
+        NA13VB6qd1Qeu3lcMRJ5Wi4AAAAAAAAAAAB4YD4AeICcAXZVInZ4VB3feFYkRHhODAB5XzwAAAAAAJmO
+        ewCaj3wRlot5v5aKef+Winn/lot54ZaLeeWXjHvdl4x665aKef+Vinn/lot5oZuRfgaakH4AAAAAAHha
+        MQB4Xj0Gd1UghHdUHdx3Vyc4dVMcAIZ4awAAAAAAAAAAAAAAAAB4Wi8AeF03C3dUIJV4VBzaeFclRqG7
+        /wB9Yj4Ap52NAJWKeACYjXs+lot53ZaKef+Wi3nhlop55ZeMetyWi3nrlop5/5aLecaZjnwnmIx6AMG6
+        qQB7XC4AfWE4CXhVIX53Ux3jd1YkVl8fAAB+ZkQAAAAAAAAAAAAAAAAAAAAAAAAAAAB4WisAeF0zD3hW
+        IZJ4VB3geFYiaXpdNQp5WSkAoZaEABUDAACYjXs4l4x6speLec6Winjhl4t51peLedOXi3mfmY57JZKG
+        cwCWhnMAbD4AAHpaLBx4VSCbd1Qd4HdWJFqFeG0CfGI+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAB6XDEAfGA5CXhWI2x3VB3ceFQesHlXJUJ8YDoJck4XAJiMeQCgloYKnJF/J5iNelyYjXtPm5B/JJ+V
+        hQaZjn0AAAAAAHtdNRJ4ViRgd1QezXdUHsZ3VydAiYueAXthPgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAB9ZEEAhnt0AXlZKjF4VSCkeFQd3nhVH7Z3VCFreFcnNHZXLBZ4VzEHnXpXA5Nz
+        SwR0VSsKdlcqG3hXJkB3VSGAd1QeyXdUHtd3VSJ/elswGHNNEgCNem0AAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADR5P8AeVsvAH1jPwZ4WCg4d1Ugi3dUHsh3Ux3adlMd0HhV
+        H8B6VyK5eVciundUH8R2Ux3TdlMd2HdUHrt3VSFzeFkrJIV0YgF+Z0cAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIJvVgCHem8Bel4zE3dX
+        Jzp3VyVjd1YjgHhWI414VySLd1YkeHZVJFZ3Vygte185Cz0AAACEdW0AAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/+AH//+AAf/+AAB//AAAP/AAAB/wAAAP4AAAB8AAAEOEAABjjAAAYYwA
+        ADEeAAARHwEACB+BAAAfwAYAP/AOAD/gBwAf4AeAH8AHwB/AA+AfgAHwD4AB8Y+AAfGHwAPjx8ADw8PA
+        A4fh4AcP8HAOD/gYGB/8AAB//wAA///AB/8=
+</value>
+  </data>
 </root>
